2001-05-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-linuxce-jp.el: New file.

	* shimbun/sb-toshiba.el: New file.

2001-05-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (XEmacs): Require `byte-optimize' expressly before
	advising the function `byte-optimize-form-code-walker'.

2001-05-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-meadow.el (shimbun-get-headers): Use
	`shimbun-expand-url' instead of `w3m-expand-url'.

2001-05-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el (w3m-history-rename-url): Don't use
	`with-current-buffer' for old Emacsen.
	(w3m-history-copy): Ditto.
	(w3m-history-share-properties): Ditto.
	(w3m-history-seek-properties): Ditto.

2001-05-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-sponichi.el (author): Corrected.

	* shimbun/sb-meadow.el: It looks all indexes.
	(shimbun-index-url): Removed.
	(shimbun-get-headers): Removed.
	(shimbun-headers): New method.

2001-05-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (slow): New rule for the developers to check a
	portability for each module.
	* w3m-xmas.el (w3m-cache-unoptimized-gif-images): Fix typo.

2001-05-27  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-ruby.el (shimbun-make-contents): Call
	`shimbun-decode-entities'.

	* shimbun/sb-nikkei.el (shimbun-get-headers): Don't call `nreverse'.

	* shimbun/sb-yahoo.el (shimbun-get-headers): Ditto.

2001-05-27  NAKAJIMA Mikio <minakaji@osaka.email.ne.jp>

	* shimbun/sb-ruby.el: New file.

	* shimbun/sb-fml.el (shimbun-fml-parse-time): Removed needless
	local variables.

2001-05-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-local-directory-view-method): Modify default value.
	(w3m-direlist-cgi-program): New variable.
	(w3m-local-retrieve): Call w3m-local-dirlist-cgi() when local
	directory.
	(w3m-local-dirlist-cgi): New function. Execute either 'w3m' or
	'direlist.cgi'.
	(w3m-goto-url-localcgi-movepoint): Use 'w3m-name-anchor instead of
	'patter-matching'.