@@ -1,3 +1,8 @@
+2001-05-29  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-decode-buffer): Allow `detect-coding-region' to
+	return both a coding-system and a list of coding-systems.
+
 2001-05-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* shimbun/sb-linuxce-jp.el: New file.
